--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@rollup/plugin-node-resolve": "^15.1.0",
     "eslint": "^8.44.0",
     "rollup": "^3.26.2",
-    "rollup-plugin-import-css": "^3.3.1"
+    "rollup-plugin-import-css": "3.1.0"
   },
   "dependencies": {
     "on-change": "^4.0.2"
